<?xml version="1.0"?>
<package format="2">
  <name>rosplan_dispatch_msgs</name>
  <version>0.0.0</version>
  <description>PDDL action dispatch messages for the ROSPlan framework.</description>
  <maintainer email="michael.cashmore@kcl.ac.uk">michael</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/KCL-Planning/ROSPlan</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>genmsg</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>actionlib_msgs</depend>


  <exec_depend>message_runtime</exec_depend>


  <export></export>
  
  <!-- <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>


  <export></export> -->
 
</package>
